k8s/app/ingress/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: resume-ingress
  namespace: keda
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`resume.local`)
      services:
        - name: keda-add-ons-http-interceptor-proxy
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`grafana.resume.local`)
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-ingress
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`argocd.resume.local`)
      services:
        - name: argocd-server
          port: 80
